feat: add config and first tests for TaskCsvRespositoryIntegrationTests